--- a/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginBottom="30dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
         android:text="@string/Login"
         />
     <TextView
