Login Page BackEnd Added

--- a/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_register.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_register.xml
@@ -19,6 +19,12 @@
         android:layout_marginTop="60sp"
     />
 
+    <ProgressBar
+        android:id="@+id/rprog"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
