--- a/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,12 @@
             android:hint="@string/enter_password" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <ProgressBar
+        android:id="@+id/lprog"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
+
     <Button
         android:id="@+id/lgnbtn"
         android:layout_width="match_parent"
