--- a/app/src/main/res/drawable/grad.xml
+++ b/app/src/main/res/drawable/grad.xml
@@ -4,9 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#87CEEB"
-        android:endColor="#E6E6FA"
+        android:startColor="#C0C0C0"
+        android:endColor="#000000"
         android:angle="270"
-        android:type="linear"/>
+        android:type="sweep"/>
 
 </shape>
