--- a/app/src/main/res/drawable/gradient_main.xml
+++ b/app/src/main/res/drawable/gradient_main.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#00C9FF"
-        android:endColor="#92FE9D"
+        android:startColor="#ADD8E6"
+        android:endColor="#98FB98"
         android:angle="270"
         android:type="linear"/>
 
