--- a/app/src/main/res/drawable/gradient_task.xml
+++ b/app/src/main/res/drawable/gradient_task.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#87CEEB"
-        android:endColor="#E6E6FA"
+        android:startColor="#C0C0C0"
+        android:endColor="#333333"
         android:angle="270"
         android:type="linear"/>
 
